# dig6

./: .gitignore  Cargo.toml  rustfmt.toml
dapplication/: Cargo.toml
dapplication/src/: dtos.rs  input_ports.rs  interactors.rs  lib.rs  output_ports.rs
dapplication/src/dtos/: ticket_dto.rs
dapplication/src/input_ports/: terminal_input_port.rs
dapplication/src/interactors/: terminal_interactor.rs
dapplication/src/output_ports/: terminal_output_port.rs
ddomain/: Cargo.toml
ddomain/src/: domain_errors.rs  entites.rs  lib.rs  value_objects.rs
ddomain/src/entites/: table_colors.rs  ticket.rs
ddomain/src/repositories/: ticket_repository.rs
ddomain/src/value_objects/: app_mode.rs  ticket_level.rs  ticket_status.rs
dinfrastructure/: Cargo.toml
dinfrastructure/src/: lib.rs  ticket_repository_impl.rs
dpresentation/: Cargo.toml
dpresentation/src/: controllers.rs  presenters.rs
dpresentation/src/controllers/: terminal_controller.rs
dpresentation/src/presenters/: ratatui_presenter.rs
src/: app.rs  app_errors.rs  main.rs
