[package]
name = "digger"
version = "0.6.0"
edition = "2021"
authors = ["Yu Tokunaga<tokunaga@grill-ware.com>"]

[workspace]
members = [".", "dapplication", "ddomain", "dinfrastructure", "dpresentation"]
resolver = "2"

[dependencies]
dpresentation = { path = "./dpresentation" }
ddomain = { path = "./ddomain" }
dinfrastructure = { path = "./dinfrastructure" }
dapplication = { path = "./dapplication" }
ratatui = { workspace = true }
serde = { workspace = true }
color-eyre = { workspace = true }
clap = { version = "4.5", features = ["derive"] }

[workspace.dependencies]
chrono = { version = "0.4", features = ["serde"] }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
color-eyre = "0.6"
